--- a/index.html
+++ b/index.html
@@ -1,34 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
+        integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
+        integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG"
+        crossorigin="anonymous"></script>
 
     <title>홍포장마차</title>
 </head>
+
 <body>
     <header>
         <div>
             <ul class="nav justify-content-end nav-pills">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">home</a>
+                    <a class="nav-link active" aria-current="page" href="#">home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">menu</a>
+                    <a class="nav-link" href="#">menu</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">about</a>
+                    <a class="nav-link" href="#">about</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">map</a>
+                    <a class="nav-link" href="#">map</a>
                 </li>
-              </ul>
+            </ul>
         </div>
         <div>
             <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
@@ -38,45 +47,103 @@
                   <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
                 </div> -->
                 <div class="carousel-inner">
-                  <div class="carousel-item active" data-bs-interval="10000">
-                    <img src="./img/prokbelly.jpg" class="d-block w-100" alt="..."  height="600px" width="400px">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5>First slide label</h5>
-                      <p>Some representative placeholder content for the first slide.</p>
+                    <div class="carousel-item active" data-bs-interval="10000">
+                        <img src="./img/prokbelly.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5 style="color: black;">First slide label</h5>
+                            <p style="color: black;">Some representative placeholder content for the first slide.</p>
+                        </div>
                     </div>
-                  </div>
-                  <div class="carousel-item" data-bs-interval="2000">
-                    <img src="./img/goodday.jpg" class="d-block w-100" alt="..."  height="600" width="400">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5>Second slide label</h5>
-                      <p>Some representative placeholder content for the second slide.</p>
+                    <div class="carousel-item" data-bs-interval="2000">
+                        <img src="./img/goodday.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Second slide label</h5>
+                            <p>Some representative placeholder content for the second slide.</p>
+                        </div>
                     </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img src="./img/kimchistew.jpg" class="d-block w-100" alt="..."  height="600" width="400">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5>Third slide label</h5>
-                      <p>Some representative placeholder content for the third slide.</p>
+                    <div class="carousel-item">
+                        <img src="./img/kimchistew.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Some representative placeholder content for the third slide.</p>
+                        </div>
                     </div>
-                  </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"  data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"  data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
                 </button>
-              </div>
+            </div>
         </div>
     </header>
     <div class="body">
         <div class="body-info">
-            <p>가게 설명글</p>
+            <div class="body-img">
+                <img src="./img/aboutpic.jpg" alt="">
+                <div class="body-text">
+                    <h2>about</h2>
+                    <p>blah blah somethink</p>
+                </div>
+            </div>
         </div>
         <div class="body-menu">
-            <p>menu info</p>
+            <h2>menu info</h2>
+            <div class="menu-section">
+                <div class="card">
+                    <img src="./img/steamegg.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">food name</h5>
+                        <p class="card-text">food ingo </p>
+                        <span class="col-xl-5">$9.99</span>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/steamegg.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">food name</h5>
+                        <p class="card-text">food ingo </p>
+                        <span class="col-xl-4">$9.99</span>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/steamegg.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">food name</h5>
+                        <p class="card-text">food ingo </p>
+                        <span class="col-xl-4">$9.99</span>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/steamegg.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">food name</h5>
+                        <p class="card-text">food ingo </p>
+                        <span class="col-xl-4">$9.99</span>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/steamegg.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">food name</h5>
+                        <p class="card-text">food ingo </p>
+                        <span class="col-lg-4">$9.99</span>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/steamegg.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">food name</h5>
+                        <p class="card-text">food ingo </p>
+                        <span class="col-lg-4">$9.99</span>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="body-map">
             <p>google map </p>
@@ -90,4 +157,5 @@
         </div>
     </footer>
 </body>
+
 </html>
